Fix mobile nav links Mobile navigation links do not work. Add the mobile navigation links. Add a margin above drinks portion of menu when on mobile. Swap top image sections small screen image.

--- a/views/styles/styles.css
+++ b/views/styles/styles.css
@@ -139,6 +139,11 @@
 #other-drinks {
 	text-align: center;
 }
+@media screen and (max-width: 39.9375em) {
+	#menu-drinks-title {
+		margin-top: 2em;
+	}
+}
 
 /* Location and Hours section ============================================== */
 /* Location Column ========================================================= */
